[package]
name = "jqtpl-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
dashmap = "5.4.0"
ropey = "1.5.1"
tokio = { version = "1.23.0", features = ["full"] }
tower-lsp = "0.17.0"
tree-sitter = "0.20.9"
tree-sitter-jqtpl = { path = "../tree-sitter-jqtpl", version = "0.0.1" }
